# controllers/contactController.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"net/http"
+	"regexp"
 
 	"github.com/gin-gonic/gin"
 	"github.com/jelufe/golang-clean-arch-api/models"
@@ -14,10 +15,11 @@ import (
 // @Param users body models.ImportContactsRequest true "Contacts"
 // @Produce application/json
 // @Tags contacts
-// @Success 200
+// @Success 200 {object} models.ImportContactsResponse
 // @Failure 400
 // @Failure 500
 // @Router /contacts [post]
+// @Security BearerAuth
 func ImportContacts() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var importContactsRequest models.ImportContactsRequest
@@ -26,6 +28,15 @@ func ImportContacts() gin.HandlerFunc {
 		if err != nil {
 			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
+		}
+
+		var re = regexp.MustCompile(`[^0-9.]`)
+		for _, row := range *importContactsRequest.Contacts {
+			cellphone := re.ReplaceAllString(row.Cellphone, "")
+			if len(cellphone) != 13 {
+				c.JSON(http.StatusBadRequest, gin.H{"error": "All cellphones must be 13 numbers"})
+				return
+			}
 		}
 
 		userType := c.GetString("user_type")
@@ -45,6 +56,6 @@ func ImportContacts() gin.HandlerFunc {
 			return
 		}
 
-		c.JSON(http.StatusOK, rowsAffected)
+		c.JSON(http.StatusOK, models.ImportContactsResponse{RowsAffected: rowsAffected})
 	}
 }
