# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/contacts": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Save contacts data in database",
                 "produces": [
                     "application/json"
@@ -31,7 +36,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ImportContactsResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request"
@@ -210,6 +218,14 @@
                     "items": {
                         "$ref": "#/definitions/models.Contact"
                     }
+                }
+            }
+        },
+        "models.ImportContactsResponse": {
+            "type": "object",
+            "properties": {
+                "rows_affected": {
+                    "type": "integer"
                 }
             }
         },
