# models/importContactsResponseModel.go
@@ -1,0 +1,5 @@
+package models
+
+type ImportContactsResponse struct {
+	RowsAffected int64 `json:"rows_affected"`
+}
